feat: add headline global- & component-tokens

--- a/legacy-instance/settings/global/_topic.scss
+++ b/legacy-instance/settings/global/_topic.scss
@@ -3,6 +3,6 @@
 $topic__font-size:                           1.2em !default;
 $topic__line-height:                         1.1 !default;
 $topic__font-weight:                         bold !default;
-$topic__font-color:                          base.$headline__color !default;
+$topic__font-color:                          base.$color-black !default;
 $topic__font-color-inverted:                 base.$color-white !default;
 $topic__margin:                              0 0 0.5em 0 !default;
