--- a/packages/components/base/source/1-atoms/rich-text/rich-text.scss
+++ b/packages/components/base/source/1-atoms/rich-text/rich-text.scss
@@ -1,6 +1,6 @@
-@use 'settings/base';
-
 .rich-text {
+  font: var(--font-copy-m);
+
   h4,
   h5,
   h6 {
@@ -20,7 +20,7 @@
   code {
     font-size: 0.85em;
 
-    background-color: base.$color-black-5-solid;
+    background-color: var(--color-grey-1);
     border-radius: 0.4em;
 
     padding: 0.2em 0.5em;
@@ -36,7 +36,7 @@
   }
 
   blockquote {
-    border-left: 0.3em solid base.$color-black-15-solid;
+    border-left: 0.3em solid var(--color-grey-2);
 
     margin-left: 0;
     margin-right: 0;
