--- a/packages/components/base/source/1-atoms/form/_form.scss
+++ b/packages/components/base/source/1-atoms/form/_form.scss
@@ -12,7 +12,7 @@
     display: flex;
     align-items: flex-start;
 
-    .button {
+    .c-button {
       flex-shrink: 0;
       margin-right: 0.5em;
 
