--- a/packages/components/base/source/1-atoms/input/fileupload/_fileupload.scss
+++ b/packages/components/base/source/1-atoms/input/fileupload/_fileupload.scss
@@ -12,7 +12,7 @@
     display: flex;
     align-items: stretch;
 
-    .button {
+    .c-button {
       display: flex;
       align-items: center;
       border-top-right-radius: 0;
