--- a/packages/components/base/source/2-molecules/filter-area/_filter-area.scss
+++ b/packages/components/base/source/2-molecules/filter-area/_filter-area.scss
@@ -36,7 +36,7 @@
     background: base.$color-white;
     /* critical:end */
 
-    &.button:active {
+    &.c-button:active {
       transform: scale(base.$button__active-scale) translateY(50%);
     }
 
