--- a/packages/components/content/source/2-molecules/visual/_visual__box.scss
+++ b/packages/components/content/source/2-molecules/visual/_visual__box.scss
@@ -24,7 +24,7 @@
     /* critical:end */
   }
 
-  a:not(.button) {
+  a:not(.c-button) {
     /* critical:start */
     color: inherit;
     /* critical:end */
