--- a/packages/components/base/source/2-molecules/content-box/content-box.scss
+++ b/packages/components/base/source/2-molecules/content-box/content-box.scss
@@ -1,95 +1,106 @@
-@use '../../0-base/1-tools/scss/helpers';
-@use 'settings/base';
-@use 'settings/global';
+@use 'sass:meta';
+@use '@kickstartds/core/source/core/custom-properties';
+@use './content-box-vars';
 
-.content-box {
-  &--align-centered {
-    // text-align: center;
-    justify-content: center !important;
+$vars: meta.module-variables(content-box-vars);
+@include custom-properties.styles($vars, true);
+
+.c-content-box {
+  margin-bottom: 2em;
+  box-sizing: border-box;
+
+  &__image {
+    flex-grow: 0;
+    flex-shrink: 0;
+    width: 100%;
+    margin-bottom: 1em;
+
+    img {
+      width: auto;
+    }
+
+    &--align-center {
+      text-align: center;
+    }
+
+    &--align-right {
+      text-align: right;
+    }
+
+    &--square {
+      position: relative;
+      padding-bottom: 100%;
+    }
+
+    &--sixteen-to-nine {
+      position: relative;
+      padding-bottom: 56.25%;
+    }
+
+    &--four-to-three {
+      position: relative;
+      padding-bottom: 75%;
+    }
+
+    &--square,
+    &--sixteen-to-nine,
+    &--four-to-three {
+      img {
+        position: absolute;
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
+      }
+    }
   }
 
-  &__item {
+  &__body {
+    display: flex;
     flex-direction: column;
-    margin-bottom: 2em;
-    box-sizing: border-box;
+    align-items: stretch;
+    flex: 1 auto;
 
-    &__image {
-      flex-grow: 0;
-      flex-shrink: 0;
-      width: 100%;
-      margin-bottom: 1em;
+    &--align-center {
+      text-align: center;
+    }
 
-      img {
-        width: auto;
-      }
+    &[min-width~='0px'] {
+      --c-content-box_topic--font: var(--font-display-s);
+      --c-rich-text-font: var(--font-copy-xs);
 
-      &--align-center {
-        text-align: center;
-      }
-
-      &--align-right {
-        text-align: right;
-      }
-
-      &--square {
-        position: relative;
-        padding-bottom: 100%;
-      }
-
-      &--sixteen-to-nine {
-        position: relative;
-        padding-bottom: 56.25%;
-      }
-
-      &--four-to-three {
-        position: relative;
-        padding-bottom: 75%;
-      }
-
-      &--square,
-      &--sixteen-to-nine,
-      &--four-to-three {
-        img {
-          position: absolute;
-          object-fit: cover;
-          width: 100%;
-          height: 100%;
-        }
+      .c-button {
+        --c-button--font: var(--font-ui-xs);
       }
     }
 
-    &__box {
-      display: flex;
-      flex-direction: column;
-      align-items: stretch;
-      flex: 1 auto;
+    &[min-width~='200px'] {
+      --c-content-box_topic--font: var(--font-display-m);
+      --c-rich-text-font: var(--font-copy-s);
 
-      &--align-center {
-        text-align: center;
+      .c-button {
+        --c-button--font: var(--font-ui-s);
       }
+    }
 
-      @each $key, $value in base.$content-box__adaptive-font-sizes {
-        &[min-width~='#{$key}'] {
-          font-size: $value;
-        }
+    &[min-width~='400px'] {
+      --c-content-box_topic--font: var(--font-display-l);
+      --c-rich-text-font: var(--font-copy-m);
+
+      .c-button {
+        --c-button--font: var(--font-ui-m);
       }
     }
   }
 
   &__topic {
-    font-size: global.$topic__font-size;
-    line-height: global.$topic__line-height;
-    font-weight: helpers.get-font-weight(global.$topic__font-weight);
-    color: global.$topic__font-color;
-    margin: global.$topic__margin;
+    font: var(--c-content-box_topic--font);
+    font-weight: var(--c-content-box_topic--font-weight);
+    color: var(--c-content-box_topic--color);
+    margin: var(--c-content-box_topic--margin);
   }
 
   &__text {
     flex: 1 auto;
-
-    p:last-child {
-      margin-bottom: 0;
-    }
   }
 
   &__link {
