--- a/packages/components/base/source/0-base/3-objects/section/section.scss
+++ b/packages/components/base/source/0-base/3-objects/section/section.scss
@@ -1,99 +1,69 @@
+@use 'sass:meta';
+@use '@kickstartds/core/source/core/custom-properties';
 @use '@kickstartds/core/source/core/breakpoint';
-@use '../../1-tools/scss/grid';
-@use '../../1-tools/scss/sizes';
 @use '../../1-tools/scss/anchor';
-@use '../../0-settings/selector';
-@use 'settings/base';
-@use 'settings/global';
+@use './section-vars';
+
+$vars: meta.module-variables(section-vars);
+@include custom-properties.styles($vars, true);
 
 .l-section {
-  @include sizes.vertical-padding;
   @include anchor.anchor-target;
 
   /* critical:start */
-  font-size: 1rem;
-  background-color: base.$section-background;
-  box-sizing: content-box;
+  padding-top: var(--l-section--padding-top);
+  padding-bottom: var(--l-section--padding-bottom);
+  background: var(--l-section--background);
+  box-sizing: border-box;
   /* critical:end */
 
-  #{selector.$template--content-30} & {
-    @include breakpoint.media('≥m') {
-      /* critical:start */
-      font-size: 0.8rem;
-      padding-top: 1.5rem;
-      padding-bottom: 1.5rem;
-      /* critical:end */
-    }
-  }
-
-  #{selector.$template--content-70} & {
-    @include breakpoint.media('≥m') {
-      /* critical:start */
-      width: 100%;
-      /* critical:end */
-    }
-  }
-
-  &--bg-1 {
+  &__container {
     /* critical:start */
-    background-color: base.$section-background--bg-1;
+    padding: 0 var(--spacing-m);
+    margin: auto;
+    width: 100%;
+    max-width: var(--g-content-width-default);
+    display: grid;
+    grid-template-columns: repeat(
+      var(--l-section_col--repeat),
+      minmax(
+        min(var(--l-section_col--min-width), 100%),
+        var(--l-section_col--max-width)
+      )
+    );
+    grid-gap: var(--l-section_container--gutter);
     /* critical:end */
-  }
 
-  &--space-before-small {
-    @include sizes.vertical-padding-top-small;
-  }
-
-  &--space-after-small {
-    @include sizes.vertical-padding-bottom-small;
-  }
-
-  &--space-before-none {
-    padding-top: 0 !important;
-  }
-
-  &--space-after-none {
-    padding-bottom: 0 !important;
-  }
-}
-
-.l-main-wrap {
-  /* critical:start */
-  @include grid.outer-container;
-  @include sizes.global-padding;
-  width: 100%;
-  /* critical:end */
-
-  &--full-gap {
-    @include breakpoint.media('≥m') {
+    &--narrow {
       /* critical:start */
-      max-width: 100%;
+      max-width: var(--g-content-width-narrow);
       /* critical:end */
     }
-  }
 
-  &--full {
-    padding: 0;
-
-    @include breakpoint.media('≥m') {
+    &--wide {
       /* critical:start */
-      max-width: 100%;
+      max-width: var(--g-content-width-wide);
       /* critical:end */
     }
-  }
 
-  &--narrow {
-    /* critical:start */
-    @include breakpoint.media('≥s') {
-      max-width: global.$grid__max-width-narrow;
-      margin: auto;
-
-      #{selector.$template--content-70} & {
-        max-width: percentage(
-          global.$grid__max-width-narrow / global.$grid__max-width
-        );
+    &--max {
+      @include breakpoint.media('≥m') {
+        /* critical:start */
+        max-width: 100%;
+        /* critical:end */
       }
     }
-    /* critical:end */
+
+    &--full {
+      /* critical:start */
+      padding: 0;
+      /* critical:end */
+
+      @include breakpoint.media('≥m') {
+        /* critical:start */
+        max-width: 100%;
+        /* critical:end */
+      }
+    }
   }
 }
