feat: add section mode "list"

--- a/packages/components/base/source/0-base/3-objects/section/_section-vars.scss
+++ b/packages/components/base/source/0-base/3-objects/section/_section-vars.scss
@@ -50,4 +50,7 @@ $col: (
   '.l-section__container--tile': (
     repeat: 'auto-fill',
   ),
+  '.l-section__container--list': (
+    repeat: 1,
+  ),
 ) !default;
