feat: add rich-text styles

--- a/packages/components/base/source/0-base/2-generic/headline/_headline.scss
+++ b/packages/components/base/source/0-base/2-generic/headline/_headline.scss
@@ -12,7 +12,8 @@ h1,
 h2,
 h3,
 h4,
-h5 {
+h5,
+h6 {
   font: var(--g-headline--font);
   font-weight: var(--g-headline--font-weight);
   text-transform: var(--g-headline--text-transform);
