feat: add margin-top to headlines

--- a/packages/components/base/source/0-base/2-generic/headline/_headline-vars.scss
+++ b/packages/components/base/source/0-base/2-generic/headline/_headline-vars.scss
@@ -7,8 +7,8 @@ $host: (
     font-weight: var(--font-weight-bold),
     text-transform: null,
     margin: (
-      xs: 0 0 0.5em,
-      s: 0 0 1em,
+      xs: 0.75em 0 0.5em,
+      s: 1.5em 0 1em,
     ),
   ),
   'h1': (
