--- a/packages/components/base/source/0-base/2-generic/headline/_headline.scss
+++ b/packages/components/base/source/0-base/2-generic/headline/_headline.scss
@@ -24,6 +24,10 @@ h6 {
     page-break-after: avoid;
   }
 
+  &:first-child {
+    margin-top: 0;
+  }
+
   a {
     text-decoration: none !important;
   }
