--- a/packages/components/blog/source/2-molecules/news-list-item/news-list.scss
+++ b/packages/components/blog/source/2-molecules/news-list-item/news-list.scss
@@ -7,17 +7,9 @@
 
 .news-list {
   &__item {
-    padding: 2rem 0;
+    padding-bottom: 1rem;
     border-bottom: 1px solid base.$color-black-10;
     box-sizing: border-box;
-
-    &:first-child {
-      padding-top: 0;
-    }
-
-    @include breakpoint.media('≥m') {
-      padding: 1.6rem 0;
-    }
 
     &__date {
       // TODO: remove conditions in version 6
@@ -80,6 +72,7 @@
         news.$news-list-item__headline-color-hover,
         null
       );
+      margin-top: 0;
 
       > a {
         // TODO: remove conditions in version 6
