--- a/packages/components/base/source/0-base/2-generic/kbd/_kbd.scss
+++ b/packages/components/base/source/0-base/2-generic/kbd/_kbd.scss
@@ -1,16 +1,12 @@
-@use 'settings/base';
-
 kbd {
-  @include base.font-sans(regular);
+  font: var(--font-ui-s);
 
   display: inline-block;
   margin: 0 0.1em;
   padding: 0.1em 0.5em 0;
-  font-size: base.$font-size-small;
-  line-height: base.$line-height-small;
-  border: 1px solid base.$color-black-25-solid;
+  border: 1px solid var(--color-grey-2);
   border-radius: 3px;
-  box-shadow: 0 1px 0 base.$color-black-25;
+  box-shadow: 0 1px 0 var(--color-black-alpha-2);
   vertical-align: 0.1em;
   white-space: nowrap;
 }
