--- a/packages/components/base/source/0-base/2-generic/media/_image.scss
+++ b/packages/components/base/source/0-base/2-generic/media/_image.scss
@@ -1,5 +1,3 @@
-@use 'settings/base';
-
 img {
   /* critical:start */
   max-width: 100%;
@@ -17,12 +15,10 @@ figure {
   }
 }
 
-%caption,
 caption,
 figcaption {
   padding-top: 0.35em;
 
-  font-size: base.$font-size-tiny;
+  font: var(--font-ui-xs);
   font-style: italic;
-  line-height: base.$line-height-small;
 }
