fix: fix content box image position

--- a/packages/components/base/source/2-molecules/content-box/content-box.scss
+++ b/packages/components/base/source/2-molecules/content-box/content-box.scss
@@ -45,6 +45,8 @@ $vars: meta.module-variables(content-box-vars);
     &--square,
     &--sixteen-to-nine,
     &--four-to-three {
+      text-align: left;
+
       img {
         position: absolute;
         object-fit: cover;
